<resources>
    <string name="ApplicationName">Sīc locūtus</string>
    <string name="SettingsTitle">Settings</string>
    <string name="ActionSettings">Settings</string>
    <string name="TitleLessons">Lessons</string>
    <string name="TitleTrainings">Trainings</string>
    <string name="TitleSummary">Summary</string>
    <string name="TextClearSettings">Clear settings</string>
    <string name="MessageClearSettings">Do you really want to clear all settings?</string>
    <string name="MenuLanguageAddTitle">Add</string>
    <string name="EditLanguageRepoButtonTitle">Edit</string>
    <string name="LanguageRepoEditNameTitle">Name</string>
    <string name="LanguageRepoLocationTitle">Location</string>
    <string name="TitleLanguageRepositories">Language repositories</string>
    <string name="TextDecline">Decline</string>
    <string name="TrainingSettingsDescription">Training settings</string>
    <string name="TitleTrainingSetup">Training setup</string>
    <string name="ButtonContinueText">Continue?</string>
    <string name="TextConjugate">Conjugate</string>
    <string name="ButtonCheckTitle">Check</string>
    <string name="MessageEditSession">Do you really want to exit this session?</string>
    <string name="TitleSessionResult">Session results</string>
    <string name="MessageConfirmUpdate">Found newer version. Update?</string>
    <string name="TextSessionTime">Time</string>
    <string name="TextTranslateASentence">Translate a sentence</string>
    <string name="TextTranslateChoose">Choose from below</string>
    <string name="TextTranslateEnter">Enter answer below</string>
    <string name="DescriptionReportABug">Report a bug</string>
    <string name="TextChooseCasing">Choose a proper word category of:</string>
    <string name="TextChooseMeaning">meaning</string>
    <string name="SaveButtonText">Save</string>
    <string name="CancelButtonText">Cancel</string>
    <string name="BrowseButtonText">Browse</string>
    <string name="TitleTheories">Theory</string>
    <string name="ActionSwitchLanguage">Switch language</string>
    <string name="TitleSelectRepositoryLanguage">Select repository and language to learn</string>
    <string name="TitleDelete">Delete</string>
    <string name="DataSaved">Saved</string>
    <string name="DatabaseUpdateNotRequired">Database update is not required</string>
    <string name="RepositoryVersion">"Repository version: "</string>
    <string name="TitleLanguagePreferences">Language preferences</string>
    <string name="TitleDatabasePreferences">Database preferences</string>
    <string name="TitleSaveImages">Save images into database</string>
    <string name="TitleSessionPreferences">Session preferences</string>
    <string name="TitleTaskCountPerSession">Task count per session</string>
    <string name="TitleNoKeyboard">Enter answers without usage of keyboard</string>
    <string name="TitleTaskPreferences">Task preferences</string>
    <string name="TitleStartTraining">Start training</string>
    <string name="SaveRepositoriesTitle">Do you want to save repository list?</string>
    <string name="TextSummaryPoints">Points</string>
    <string name="DescriptionLanguageLogo">Logo of language</string>
    <string name="TextLanguageTitle">"Language: "</string>
    <string name="TextLanguageVersionTitle">"Version: "</string>
    <string name="TextLanguageAuthorTitle">"Author: "</string>
    <string name="TitleNextLesson">Next lesson</string>
    <string name="TitleNextTraining">Next training</string>
    <string name="TitleNextTheory">Next theory</string>
    <string name="TitleBestLessons">Best lessons</string>
    <string name="TitleReportABug">Report a bug</string>
    <string name="SaveBugReportTitle">Do you want to save a bug report?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="save">Save</string>
    <string name="TitleVocabularyCount">Vocabulary (%d)</string>
    <string name="TitleSentencesCount">Sentences (%d)</string>
    <string name="DescriptionAppLogo">Logo</string>
    <string name="TextEnglishLanguage" translatable="false">English</string>
    <string name="TextLatvianLanguage" translatable="false">latviešu</string>
    <string name="TitleSelectLanguage">Select display language</string>
    <string name="TitleSystemPreferences">General preferences</string>
    <string name="PreferenceRepositoriesTitle">Repositories</string>
    <string name="TitleDisplayLanguage">Display language</string>

    <string name="LatvianLocaleName" translatable="false">latviešu</string>
    <string name="EnglishLocaleName" translatable="false">English</string>
    <string name="PreferenceRepositoryLanguageNotSelected">Repository and language is not selected</string>
    <string name="PreferenceRepositoryLanguageTitle">Repository and language</string>
    <string name="PreferenceDefaultLocaleCodeKey" translatable="false">en</string>
    <string name="TitleChooseTaskOptions">Answer option count in choose task</string>
    <string name="NotEnoughTrainingTasksMessage">Not enough tasks in the training (got: %d, needs: %d)</string>
    <string name="NotEnoughLessonTasksMessage">Not enough tasks in the lesson (got: %d, needs: %d)</string>
    <string name="TextBugInApplication">In application</string>
    <string name="TextBugInContent">In content</string>
    <string name="TextBugDescribe">Describe the bug:</string>
    <string name="TitleConnectedInformation">Collected data</string>
    <string name="DescriptionScreenshot">Screenshot</string>
    <string name="TextBugReportSaved">Bug report saved</string>
    <plurals name="RepositoryCount">
        <item quantity="one">%d repository</item>
        <item quantity="zero">%d repositories</item>
        <item quantity="other">%d repositories</item>
    </plurals>
    <string name="EnumTaskTypeUnknownTask">Unknown task</string>
    <string name="EnumTaskTypeSelectTask">Select task</string>
    <string name="EnumTaskTypeChooseTask">Choose task</string>
    <string name="EnumTaskTypeConjugateTask">Conjugate task</string>
    <string name="EnumTaskTypeDeclineTask">Decline task</string>
    <string name="EnumTaskTypeTranslateTask">Translate task</string>
    <string name="TextErrors">Errors</string>
    <string name="TitleStrictTaskCount">Do not allow less tasks in session than task count</string>
    <string name="TitleDocumentation">Documentation</string>
    <string name="CopyrightText">
        ## Application copyright\n
        \n
        This application is licensed under the GNU General Public License version 3 or later (GPLv3+).\n
        You can obtain a copy of the full license at [https://www.gnu.org/licenses/gpl-3.0.html](https://www.gnu.org/licenses/gpl-3.0.html).
    </string>
    <string name="TitleVocabulary">Vocabulary</string>
    <string name="EmptyListMessage">Nothing to show</string>
    <string name="WiktionaryCachedText">This content is cached from Wiktionary</string>
    <string name="WiktionaryText">
        ## Thanks to Wiktionary\n
        \n
        All definitions in this app are provided courtesy of Wiktionary, the free, collaborative
        dictionary. We deeply appreciate the dedication of its contributors in building this
        valuable resource. Please visit [https://www.wiktionary.org](https://www.wiktionary.org) to explore, learn, and
        contribute — every improvement helps keep this amazing project thriving for everyone.
    </string>
</resources>